--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 <body>
   <div class="container">
     <img id="gif" alt="gif" src="https://media.giphy.com/media/FTGah7Mx3ss04PcasF/giphy.gif"/>
-    <p class="title">Làm người yêu anh nhé ?</p>
+    <p class="title">Miễn cấm túc 1 tuần nha em</p>
     <div class="button-group">
       <button class="action-button" id="yes">Đồng ý</button>
       <button class="action-button" id="no">Không</button>
